# clc

./: Cargo.toml  Makefile  README.md  rustfmt.toml
alfred/: clc.alfredworkflow  info.plist.in
src/: alfred.rs  buffer.rs  config.rs  functions.rs  lexer.rs  main.rs  names.rs  number.rs  operators.rs  parser.rs  symbols.rs  unit.rs  value.rs
