[package]
name = "clc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
clap = "3.0.0-beta.4"
float-cmp = "0.9.0"
lazy_static = "1.4.0"
phf = { version = "0.10", features = ["macros"] }
