[package]
name = "clc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
clap = { version = "4.0.32", features = ["derive"] }
float-cmp = "0.9.0"
lazy_static = "1.4.0"
phf = { version = "0.11.1", features = ["macros"] }
